Revert "Disable fixed background on mobile"
This reverts commit 486836b0f675d9f9eadb4fccef343ffea328aa58.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -263,12 +263,6 @@ main {
   gap: 1rem;
 }
 
-@media (max-width: 719px) {
-  body::before {
-    position: absolute;
-  }
-}
-
 @media (min-width: 720px) {
   .nav-desktop {
     display: flex;
